# pricepoint

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PRD.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  expose.sh  notes.md  oldCLAUDE.md  package-lock.json  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  pr-title.yml  publish.yml  release-please.yml
dags/: dag_analyze_tile_tables.py  dag_batch_scoring.py  dag_bts_noise_collection.py  dag_cary_greenway_collection.py  dag_cary_park_collection.py  dag_cary_police_collection.py  dag_census_demographic_collection.py  dag_census_detailed_race_collection.py  dag_data_collection.py  dag_description_scoring.py  dag_economic_collection.py  dag_feature_engineering.py  dag_greenspace_gold_tables.py  dag_greenspace_region_metrics.py  dag_greenway_gold_tables.py  dag_hifld_infrastructure_collection.py  dag_hifld_railroad_collection.py  dag_model_training.py  dag_morrisville_police_collection.py  dag_nces_school_collection.py  dag_ourairports_collection.py  dag_overture_places_collection.py  dag_pad_us_collection.py  dag_photo_scoring.py  dag_place_names_refresh.py  dag_police_gold_tables.py  dag_property_geo_lookups.py  dag_property_history_metrics.py  dag_raleigh_greenway_collection.py  dag_raleigh_park_collection.py  dag_raleigh_police_collection.py  dag_redfin_listing_collection.py  dag_redfin_transform.py  dag_risk_boundary_build.py  dag_school_gold_tables.py  dag_subdivision_collection.py  dag_tiger_boundary_collection.py  dag_tiger_road_collection.py  dag_usgs_trail_collection.py  dag_wake_county_property_collection.py  (+11 more)
dags/common/: task_helpers.py
docker/: airflow.Dockerfile  api.Dockerfile  frontend.Dockerfile  ingestion.Dockerfile  mlflow.Dockerfile  prometheus.yml
docker/maintenance/: vacuum_analyze.sh
docker/martin/: config.yaml
docker/pgadmin/: pgpass  servers.json
docs/: DAG-COLLECTORS.md  DEPLOYMENT.md  FEATURE_CATALOG.md  dag_diagram.html  design-guidelines.md  landing-page-prd.md  logo.html  pricepoint-design-spec-final.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  playwright.config.ts  tab-screenshots.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/e2e/: auth-flow.spec.ts  error-states.spec.ts  map-interactions.spec.ts  mortgage-calculator.spec.ts  responsive.spec.ts  search-flow.spec.ts  settings.spec.ts
frontend/scripts/: generate-types.sh
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: App.test.tsx
frontend/src/components/: DataRequestBanner.tsx  PropertyNotFoundDialog.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/data/: emptyDashboardData.ts  mockDashboardData.ts  mockDemographicGeo.ts
frontend/src/hooks/: useActiveSection.ts  useApi.ts  useChoropleth.ts  useComparables.ts  useDemographics.ts  useFeatureAttributions.ts  useGeocode.ts  useGreenspace.ts  useMapRadius.ts  useMapStyle.ts  useModelMethodology.ts  useMortgageCalculator.ts  useMortgageDefaults.ts  useNeighborhoodValuation.ts  useNuisanceSources.ts  useNuisances.ts  usePoiPreferences.ts  usePoiRadius.ts  usePois.ts  usePoliceIncidents.ts  usePropertyData.ts  usePropertyLookup.ts  useRecentlyViewed.ts  useRisks.ts  useSavedPois.ts  useSavedProperties.ts  useSavedProperty.ts  useSchoolsNearby.ts  useScrollProgress.ts
frontend/src/pages/: ComparablesPage.tsx  DashboardPage.tsx  ForecastPage.tsx  LandingPage.tsx  ModelMethodologyPage.tsx  NotFoundPage.tsx  PropertyDashboardPage.tsx  ResultsPage.tsx  SavedPropertiesPage.tsx  SettingsPage.tsx  SignInPage.tsx  SignUpPage.tsx  TestDashboardPage.tsx  UploadPage.tsx  UserSettingsPage.tsx
frontend/src/services/: api.ts  auth.ts  comparables.ts  geocode.ts  model.ts  property.ts  saved.ts  savedPois.ts  upload.ts
frontend/src/test/: setup.ts
frontend/src/types/: api.generated.ts  index.ts  leaflet-heat.d.ts  view-transitions.d.ts
frontend/src/utils/: buildPriceHistory.ts  buildPropertyDetails.ts  chartTokens.ts  choroplethColors.ts  mapDemographicsResponse.ts  mapPropertyResponse.ts  noiseColors.ts  viewTransition.ts
helm/home-value-forecast/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
helm/home-value-forecast/templates/: NOTES.txt  _helpers.tpl  airflow-deployment.yaml  airflow-redfin-pvc.yaml  api-deployment.yaml  backup-cronjob.yaml  backup-pvc.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  init-jobs.yaml  maintenance-cronjob.yaml  martin-deployment.yaml  minio-service.yaml  minio-statefulset.yaml  mlflow-deployment.yaml  mlflow-service.yaml  networkpolicy.yaml  osrm-configmap.yaml  osrm-deployment.yaml  osrm-pvc.yaml  osrm-service.yaml  pdb.yaml  pgbouncer-deployment.yaml  postgres-statefulset.yaml  secret.yaml  servicemonitor.yaml
helm/pricepoint/: Chart.yaml  values-dev.yaml  values.yaml
helm/pricepoint/templates/: _helpers.tpl  airflow-dag-processor-deployment.yaml  airflow-logs-pvc.yaml  airflow-pod-template.yaml  airflow-rbac.yaml  airflow-redfin-pvc.yaml  airflow-scheduler-deployment.yaml  airflow-service.yaml  airflow-webserver-deployment.yaml  api-deployment.yaml  api-service.yaml  configmap.yaml  (+22 more)
prd/: PRD-final-phase.md  PRD-hifld.md  PRD-infra-data.md  PRD-overture.md  PRD-phase1.md  PRD-phase2.md  PRD-redfin-data.md  PRD-ui-enhancements.md
pricepoint/: __init__.py  cli.py  config.py
pricepoint/collectors/: __init__.py
pricepoint/utils/: logger.py
scripts/: dump_openapi.py  profile_features.py  rsync_redfin.sh
src/pricepoint/: __init__.py
tests/: conftest.py
tests/docker/: test_compose_services.py  test_docker_builds.py  test_env_files.py
tests/fixtures/: wake_county_property_sample.txt
tests/integration/: conftest.py
tests/performance/: forecast.js  geocode.js  property.js  run_all.sh  spatial.js  spike.js
tests/unit/: test_config.py  test_redis_dependency.py
(+473 files in other folders)
