[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pricepoint"
version = "0.1.0"
description = "Forecasting home values using geospatial, housing, and economic data"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy>=2.0,<3",
    "geoalchemy2>=0.15,<1",
    "alembic>=1.13,<2",
    "psycopg2-binary>=2.9,<3",
    "pydantic-settings>=2.3,<3",
    "mlflow>=2.14,<3",
    "boto3>=1.34,<2",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-cov>=5.0,<6",
    "pytest-asyncio>=0.23,<1",
    "testcontainers[postgres,minio]>=4.4,<5",
    "shapely>=2.0,<3",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
]

# NOTE: Airflow (apache-airflow>=2.9,<3) requires SQLAlchemy <2.0 which
# conflicts with core deps. Install it separately in the Airflow Dockerfile
# via: pip install apache-airflow>=2.9,<3

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require Docker/testcontainers)",
    "docker: Docker build smoke tests",
    "slow: Long-running tests",
]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/pricepoint"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pricepoint"]
