[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pricepoint"
version = "1.0.0-dev.30"
description = "Forecasting home values using geospatial, housing, and economic data"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy>=2.0,<3",
    "geoalchemy2>=0.15,<1",
    "alembic>=1.13,<2",
    "psycopg2-binary>=2.9,<3",
    "pydantic-settings>=2.3,<3",
    "mlflow>=2.14,<3",
    "boto3>=1.34,<2",
    "httpx>=0.27,<1",
    "odsclient>=0.8,<1",
    "redis[hiredis]>=5.0,<6",
    "geopandas>=1.0,<2",
    "shapely>=2.0,<3",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.0,<6",
    "python-multipart>=0.0.22",
    "fredapi>=0.5,<1",
    "xgboost>=2.0,<3",
    "passlib[bcrypt]>=1.7,<2",
    "python-jose[cryptography]>=3.3,<4",
    "bcrypt<4.2",
    "slowapi>=0.1,<1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "authlib>=1.6.8",
    "email-validator>=2.3.0",
    "duckdb>=1.4.4",
    "Pillow>=10.0,<12",
    "rasterio>=1.3,<2",
    "scipy>=1.14,<2",
    "shap>=0.43,<1",
    "matplotlib>=3.8,<4",
    "optuna>=4.0,<5",
    "setuptools>=75,<82",
    "ydata-profiling>=4.6,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-cov>=5.0,<6",
    "pytest-asyncio>=0.23,<1",
    "testcontainers[postgres,minio]>=4.4,<5",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
]

# NOTE: Airflow and its providers are installed separately in the Airflow
# Dockerfile to avoid SQLAlchemy version conflicts with the main project.

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require Docker/testcontainers)",
    "docker: Docker build smoke tests",
    "slow: Long-running tests",
]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/pricepoint"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = "odsclient.*"
follow_imports = "skip"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_author = "CI Bot <ci@example.com>"
commit_message = "chore(release): {version}"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.dev]
match = "dev"
prerelease = true
prerelease_token = "dev"

[tool.semantic_release.changelog]
output_format = "md"
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Initial [Cc]ommit.*''',
]

[tool.semantic_release.remote]
type = "gitlab"
domain = "gitlab.example.com"

[tool.semantic_release.publish]
upload_to_vcs_release = false

[tool.hatch.build.targets.wheel]
packages = ["src/pricepoint"]

[dependency-groups]
dev = [
    "types-python-dateutil>=2.9.0.20260302",
]
