[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pricepoint"
version = "1.0.0"
description = "Forecasting home values using geospatial, housing, and economic data"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy>=2.0.51,<3",
    "geoalchemy2>=0.20.0,<1",
    "alembic>=1.18.5,<2",
    "psycopg2-binary>=2.9.12,<3",
    "pydantic-settings>=2.14.2,<3",
    "mlflow>=2.14,<3",
    "boto3>=1.43.54,<2",
    "httpx>=0.27,<1",
    "odsclient>=0.8,<1",
    "redis[hiredis]>=5.0,<6",
    "geopandas>=1.1.4,<2",
    "shapely>=2.0,<3",
    "beautifulsoup4>=4.15.0,<5",
    "lxml>=5.0,<6",
    "python-multipart>=0.0.32",
    "fredapi>=0.5,<1",
    "xgboost>=2.0,<3",
    "passlib[bcrypt]>=1.7,<2",
    "python-jose[cryptography]>=3.3,<4",
    "bcrypt<4.2",
    "slowapi>=0.1.10,<1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "authlib>=1.7.2",
    "email-validator>=2.3.0",
    "duckdb>=1.5.5",
    "Pillow>=10.0,<12",
    "rasterio>=1.3,<2",
    "scipy>=1.14,<2",
    "shap>=0.51.0,<1",
    "matplotlib>=3.11.1,<4",
    "optuna>=4.9.0,<5",
    "setuptools>=75,<82",
    "ydata-profiling>=4.6,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-cov>=7.1.0,<8",
    "pytest-asyncio>=0.23,<1",
    "testcontainers[postgres,minio]>=4.4,<5",
    "ruff>=0.15.22,<1",
    "mypy>=1.10,<2",
]

# NOTE: Airflow and its providers are installed separately in the Airflow
# Dockerfile to avoid SQLAlchemy version conflicts with the main project.

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require Docker/testcontainers)",
    "docker: Docker build smoke tests",
    "slow: Long-running tests",
]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/pricepoint"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = "odsclient.*"
follow_imports = "skip"

[tool.hatch.build.targets.wheel]
packages = ["src/pricepoint"]

[dependency-groups]
dev = [
    "types-python-dateutil>=2.9.0.20260302",
]
